# SuperNova

./: .cursorrules  .env.example  .gitignore  .pre-commit-config.yaml  DEVELOPMENT_ROADMAP.md  PROJECT_STRUCTURE.md  README.md  alembic.ini  pyproject.toml  readme.md
alembic/: README.md  env.py
alembic/versions/: 001_add_tasks.py
backend/: config.py  exceptions.py  main.py
backend/adapters/: __init__.py  base.py  exceptions.py  registry.py
backend/adapters/bilibili/: __init__.py  adapter.py
backend/api/: exception_handlers.py
backend/api/v1/: accounts.py  dashboard.py  data.py  deps.py  feature_flags.py  health.py  platforms.py  tasks.py
backend/infrastructure/: circuit_breaker.py  module_controller.py  rate_limiter.py
backend/infrastructure/account_pool/: models.py  service.py  state_machine.py
backend/infrastructure/proxy_pool/: scorer.py  service.py
backend/middleware/: logging.py  rate_limit.py  security.py
backend/models/pg/: __init__.py  base.py  feature_flag.py  task.py
backend/scheduler/: celery_app.py  tasks.py
backend/services/: data_service.py  feature_flag.py  monitoring.py  task_service.py
backend/storage/: index_sync.py  media_store.py  raw_store.py  standard_store.py
backend/utils/: fingerprint.py  helpers.py  logging.py
docs/architecture/: README.md  feature-flags-implementation.md
docs/architecture/decisions/: 001-celery-over-airflow.md  (+2 more)
docs/operations/: deployment.md
scripts/: init_db.py  seed_accounts.py
tests/: conftest.py  test_feature_flags.py  test_rate_limiter.py  test_task_service.py
(+10 files in other folders)
